[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Wei Lu", email = "luwei.here@gmail.com"},
]
dependencies = [
    "requests>=2.28.1",
    "beautifulsoup4>=4.11.1",
    "tabula-py>=2.5.1",
    "setuptools>=65.5.0",
    "pyPDF2>=2.11.1",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
